--- a/fog-off/src/index.html
+++ b/fog-off/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Ionic App</title>
+  <title>Fog Off</title>
 
   <base href="/" />
 
@@ -16,6 +16,8 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <script src="http://maps.google.com/maps/api/js?key=AIzaSyCvPKh-2Z1Ii-WTn-N8t5rwbed4FVojZvg"></script>
+  <!-- AIzaSyCvPKh-2Z1Ii-WTn-N8t5rwbed4FVojZvg -->
   <script src="cordova.js"></script>
 </head>
 
